# meshchat-device

./: .gitignore  CMakeLists.txt  DEVELOPMENT_LOG.md  README.md  USER_GUIDE.md  build.bat  build.sh  sdkconfig.defaults
main/: CMakeLists.txt  main.c
main/bluetooth/: ble_server.c  ble_server.h  gatt_srv.c  gatt_srv.h
main/config/: device_config.h
main/power/: power_mgmt.c  power_mgmt.h
main/radio/: lora.c  lora.h  mesh.c  mesh.h
main/storage/: nvs_storage.c  nvs_storage.h
main/wifi/: wifi_ap.c  wifi_ap.h
native-app/: README.md  package.json
native-app/src/components/: ChatScreen.tsx
web/: index.html  manifest.json  service-worker.js  test-auto-positioning.html  test-group-chat.html  test-interface.html  test-pocket-mode.html  test-unified-app.html  unified-mesh-app.html
web/css/: style.css
web/js/: bluetooth.js  chat.js  mesh.js
